bk_ida/gccida/c0/output_constructor
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constructor/src/varasm.c:5160:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // [rsp+8h] [rbp-108h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constructor/src/varasm.c:5185:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *min_index; // [rsp+D8h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constructor/src/varasm.c:5252:15: error: use of undeclared identifier 'QCameraExposure'
next_offset = QCameraExposure::setAutoIsoSensitivity( field); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constructor/src/varasm.c:5288:23: error: use of undeclared identifier 'QCameraExposure'
shift = next_offset - QCameraExposure::setAutoIsoSensitivity( field); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constructor/src/varasm.c:5315:7: error: use of undeclared identifier 'QCameraExposure'
v11 = QCameraExposure::setAutoIsoSensitivity( field); 
      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constructor/src/obj/varasm.o] Error 1
